[tool.poetry]
name = "rest_api"
version = "0.1.0"
description = ""
authors = ["byytelope <shadhanm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask-marshmallow = "^0.13.0"
marshmallow-sqlalchemy = "^0.23.1"
black = "^20.8b1"
sqlalchemy_utils = "^0.36.8"
flask-cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
